--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "vue-boilerplate",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "@vue/cli-plugin-eslint": "^4.5.15",
-    "axios": "^0.24.0",
-    "axios-oauth-client": "^1.4.4",
-    "axios-token-interceptor": "^0.2.0",
-    "core-js": "^3.20.3",
-    "register-service-worker": "^1.7.2",
-    "vue": "^3.2.27",
-    "vue-router": "^4.0.0-0",
-    "vue-slider-component": "^4.0.0-beta.5",
-    "vue3-whr-ripple-directive": "^1.0.0",
-    "vuex": "^4.0.2"
-  },
-  "devDependencies": {
-    "@iconify/vue": "^3.1.2",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~5.0.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.3.1"
-  }
+	"name": "vue-boilerplate",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint"
+	},
+	"dependencies": {
+		"@vue/cli-plugin-eslint": "^5.0.8",
+		"axios": "^0.24.0",
+		"axios-oauth-client": "^1.4.4",
+		"axios-token-interceptor": "^0.2.0",
+		"core-js": "^3.8.3",
+		"register-service-worker": "^1.7.2",
+		"vue": "^3.2.13",
+		"vue-router": "^4.0.3",
+		"vue-slider-component": "^4.0.0-beta.5",
+		"vue3-whr-ripple-directive": "^1.0.0",
+		"vuex": "^4.0.0"
+	},
+	"devDependencies": {
+		"@iconify/vue": "^3.1.2",
+		"@babel/core": "^7.12.16",
+		"@babel/eslint-parser": "^7.12.16",
+		"@vue/cli-plugin-babel": "~5.0.0",
+		"@vue/cli-plugin-eslint": "~5.0.0",
+		"@vue/cli-plugin-pwa": "~5.0.0",
+		"@vue/cli-plugin-router": "~5.0.0",
+		"@vue/cli-plugin-vuex": "~5.0.0",
+		"@vue/cli-service": "~5.0.0",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-vue": "^8.0.3",
+		"prettier": "^2.4.1",
+		"sass": "^1.32.7",
+		"sass-loader": "^12.0.0"
+	}
 }
