--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
 		"axios-token-interceptor": "^0.2.0",
 		"core-js": "^3.8.3",
 		"register-service-worker": "^1.7.2",
+		"socket.io-client": "^4.5.1",
 		"vue": "^3.2.13",
+		"vue-3-socket.io": "^1.0.5",
 		"vue-router": "^4.0.3",
 		"vue-slider-component": "^4.0.0-beta.5",
+		"vue3-google-map": "^0.13.2",
 		"vue3-whr-ripple-directive": "^1.0.0",
 		"vuex": "^4.0.0"
 	},
 	"devDependencies": {
-		"@iconify/vue": "^3.1.2",
 		"@babel/core": "^7.12.16",
 		"@babel/eslint-parser": "^7.12.16",
+		"@iconify/vue": "^3.1.2",
 		"@vue/cli-plugin-babel": "~5.0.0",
 		"@vue/cli-plugin-eslint": "~5.0.0",
 		"@vue/cli-plugin-pwa": "~5.0.0",
