--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"axios-oauth-client": "^1.4.4",
 		"axios-token-interceptor": "^0.2.0",
 		"core-js": "^3.8.3",
+		"geolib": "^3.3.3",
 		"register-service-worker": "^1.7.2",
 		"socket.io-client": "^4.5.1",
 		"vue": "^3.2.13",
